2002-05-07  Paolo Bonzini  <bonzini@gnu.org>

	* sigsegv.h.in [__hpux, hpux]: Define HAVE_SIGSEGV_RECOVERY.
	* handler.c (UNIX_HPUX) [__hpux, hpux]: New macro.
	Define the hacks to access CR21.
	* test1.c (mmap_zeromap): Return the address.
	(handler): Don't hardcode the correct fault address.
	(main): Set page to the result of mmap_zeromap.
	* test2.c (mmap_zeromap): Return the address.
	(main): Set area1/area2/area3 to the result of mmap_zeromap.

2002-05-06  Bruno Haible  <bruno@clisp.org>

	* test1.c: Include <stdlib.h>, for exit().
	* test2.c: Likewise.
	* test3.c: Likewise.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.devel (ACLOCAL): Remove variable.
	(ACSELECT): Remove variable.
	(OTHERMACROS): Remove variable.
	(m4/*.m4): New rules.
	(autoconf/aclocal.m4): Construct using aclocal instead of acselect.

2001-08-25  Bruno Haible  <haible@clisp.cons.org>

	Upgrade to autoconf-2.52.
	* autoconf/autoconf: Upgrade to autoconf-2.52.
	* autoconf/acgeneral.m4: Remove file.
	* autoconf/acspecific.m4: Remove file.
	* autoconf/autoconf.m4f: New file, from autoconf-2.52.
	* autoconf/aclocal.m4: Require autoconf-2.52.
	(CL_CANONICAL_HOST): Call AC_CANONICAL_HOST. Don't cache the result,
	AC_CANONICAL_HOST does it itself. Add $SHELL in front of
	$ac_config_guess and $ac_config_sub.
	(CL_SIGACTION_REINSTALL): Include <string.h>, for memset declaration.
	* Makefile.devel (AUTOCONF_FILES): Remove acgeneral.m4, acspecific.m4.
	Add autoconf.m4f.
	(configure): Use autoconf options -A, -l instead of -m.
	* config.h.in: Don't define HAVE_MEMSET.
	(MPROTECT_CONST, SETRLIMIT_CONST): Use #undef, not #define, to work
	around an autoconf bug.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* autoconf/acgeneral.m4 (AC_MSG_RESULTPROTO): Remove macro.
	(AC_LANG_EXTERN): Move to aclocal.m4.
	* autoconf/aclocal.m4 (AC_LANG_EXTERN): Moved here from acgeneral.m4.
	(CL_PROTO): Use AC_MSG_RESULT directly, instead of AC_MSG_RESULTPROTO.