@@ -52,7 +52,7 @@
 
 /* #undef HAVE_SIGSEGV_RECOVERY here if test1 crashes */
 
-#if defined(__linux__) || (defined(sun) && defined(unix) && (defined(mc68020) || defined(sparc) || (defined(i386) || defined(__i386)))) || ((defined(sgi) || defined(__sgi)) && (defined(SYSTYPE_SVR4) || defined(__SYSTYPE_SVR4))) || defined(__osf__) /* Linux, SunOS, Irix, OSF/1 */
+#if defined(__linux__) || defined(__FreeBSD__) || (defined(sun) && defined(unix) && (defined(mc68020) || defined(sparc) || (defined(i386) || defined(__i386)))) || ((defined(sgi) || defined(__sgi)) && (defined(SYSTYPE_SVR4) || defined(__SYSTYPE_SVR4))) || defined(__osf__) /* Linux, FreeBSD, SunOS, Irix, OSF/1 */
 /* #define HAVE_STACK_OVERFLOW_RECOVERY ifdef HAVE_SIGALTSTACK in config.h */
 #endif
 
@@ -105,7 +105,7 @@ typedef struct sigcontext * stackoverflow_context_t;
 #elif defined(sun) && defined(__svr4__) && (defined(sparc) || (defined(i386) || defined(__i386))) /* SunOS 5 */
 #include <ucontext.h>
 typedef ucontext_t * stackoverflow_context_t;
-#elif ((defined(sgi) || defined(__sgi)) && (defined(SYSTYPE_SVR4) || defined(__SYSTYPE_SVR4))) || defined(__osf__) /* Irix 5, OSF/1 */
+#elif defined(__FreeBSD__) || ((defined(sgi) || defined(__sgi)) && (defined(SYSTYPE_SVR4) || defined(__SYSTYPE_SVR4))) || defined(__osf__) /* FreeBSD, Irix 5, OSF/1 */
 #include <signal.h>
 typedef struct sigcontext * stackoverflow_context_t;
 #else
